--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
+    "swiper": "^11.1.3",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
